16588
I took me an hour to figure out what was going on here. Reduced example attached.

The compiler tells me

{code}
Gaga.scala:31: error: type mismatch;
 found   : scala.runtime.StringAdd
 required: Set.this.Entry
            new Entry( id, tagVal, prevRef, nextRef )
            ^
{code}

If I remove all but the first constructor argument (id) and change the instantiation to `new Entry( id )`, the error message becomes correct:

{code}
Gaga.scala:32: error: constructor Entry in class Entry cannot be accessed in object EntryReader
            new Entry( id )
            ^
{code}

